messenger bot updated, docs updated
